Fix contrast ratio problem

--- a/assets/css/lab.css
+++ b/assets/css/lab.css
@@ -70,7 +70,7 @@ ul > li img {
     }
   .thumb .technologies {
     font-size: 14px;
-    color: #888;
+    color: #585858;
   }
 .thumb-body {
   padding: 1.2rem;
